namespaces/live-1.cloud-platform.service.justice.gov.uk/moving-people-safely-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moving-people-safely-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "moving-people-safely"
    cloud-platform.justice.gov.uk/owner: "pecs-digital-tech@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/moving-people-safely.git"
    cloud-platform.justice.gov.uk/slack-channel: "moving-people-safely"
